<resources>
    <string name="app_name">Travel Expenses</string>

    <string name="menu_expenses">Расходы</string>
    <string name="menu_expense">Статьи</string>
    <string name="menu_export">Экспорт</string>
    <string name="menu_exchange">Крсы валют</string>
    <string name="menu_sum_expenses">Итоги</string>
    <string name="menu_clear_expenses">Очистить</string>
    <string name="menu_about">О программе</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_map">Карта</string>
    <string name="menu_map_test">Google maps</string>
    <string name="menu_map_date_filter">Показать все за дату</string>
    <string name="menu_map_date_filter_title">По дате</string>
    <string name="menu_map_expense_filter">Показать все точки по статье</string>
    <string name="menu_map_expense_filter_title">По статье</string>
    <string name="menu_save_title">Сохранить</string>

    <string name="menu_add_photo">Add photo</string>
    <string name="menu_add_photo_title">Add photo</string>

    <string name="nav_label_expenses">Поиск в расходах</string>
    <string name="nav_label_search_result_expenses">Результаты поиска</string>
    <string name="nav_label_about">О программе</string>
    <string name="nav_label_add_expenses">Новая запись</string>
    <string name="nav_label_edit_expenses">Редактировать</string>
    <string name="nav_label_move_expenses">Переместить в</string>
    <string name="nav_label_settings">Настройки</string>
    <string name="nav_label_expense">Статьи</string>
    <string name="nav_label_edit_expense">Редактировать статью</string>
    <string name="nav_label_sum">Итоги</string>
    <string name="nav_label_sum_expense">по статьям</string>
    <string name="nav_label_sum_currency">по валютам</string>
    <string name="nav_label_exchange">Курсы валют</string>
    <string name="nav_label_expense_choice">Выберите статью</string>
    <string name="nav_label_export">Экспорт</string>

    <string name="about_title">О программе</string>
    <string name="about_message">"Версия 2.00\n\n Особая благодарность Олегу за титанические усилия по вразумению автора"
    " прораммы в процессе написания\n\n Для тех, кто хочет поддержать проект "
    "WMZ Z463710705149\n"</string>

    <string name="expense_del_warning">"%1$s\nЕсть связанные с этой статьей записи в количестве %2$d шт."
    "Данные будут безвозвратно потеряны!"</string>
    <string name="expense_info_warning">"По статье найдено %1$d записей в %2$d папках"
     "</string>

    <string name="dialog_expenses_del_all_title">Удалить?</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_cancel">Нет</string>
    <string name="dialog_title_del_photo">Удалить прикрепленное фото?</string>
    <string name="dialog_title_del_photo_gallery">Удалить фото из галереи и записи?</string>
    <string name="dialog_location_access_required">"Получить разрешения на определение ваших координат? В случае отказа опция будет отключена"</string>
    <string name="dialog_camera_access_required">"Получить разрешения для работы с камерой? "</string>
    <string name="dialog_permission_required">"Получение разрешений"</string>
    <string name="dialog_expenses_del_supporting_text">%1$d записей</string>
    <string name="dialog_expenses_del_all_message">Все записи с расходами будут безвозвратно потеряны.Для их сохранения в другом месте воспользуйтесь Экспортом.
    </string>
    <string name="dialog_del_title">Удалить?</string>
    <string name="dialog_exchange_is_empty">Ничего не найдено</string>
    <string name="hint_datetime_created">Запись создана</string>
    <string name="hint_sum">Сумма</string>
    <string name="hint_note">Примечание</string>
    <string name="add_record_title">Добавить запись</string>
    <string name="oneUah">за 1 UAH на</string>
    <string name="oneRub">за 1 RUB на</string>
    <string name="oneByn">за 1 BYN на</string>
    <string name="noCurrency">Не выбрана валюта по умолчанию</string>
    <string name="hint_expense">Статья расходов</string>
    <string name="hint_currency">Валюта</string>
    <string name="hint_folderName">Имя</string>
    <string name="hint_folderDescription">Описание</string>

    <string name="reload">Повторить</string>
    <string name="errorAPI">Ошибка связи с банком. \nПопробуйте позже.</string>


    <string name="settings_currency_title">Автоматическая конвертация</string>
    <string name="settings_currency_item_off">отключено</string>
    <string name="settings_currency_item_uah">в UAH (по курсу НБУ)</string>
    <string name="settings_currency_item_rub">в RUB (по курсу ЦРБ)</string>
    <string name="settings_currency_item_byn">в BYN (по курсу НБРБ)</string>
    <string name="settings_gps">Использовать GPS</string>
    <string name="settings_backup_title">Автосохранение</string>
    <string name="settings_backup_item_off">отключено</string>
    <string name="settings_backup_item_12">каждые 12 часов</string>
    <string name="settings_backup_item_24">ежедневно</string>
    <string name="settings_backup_item_week">еженедельно</string>
    <string name="accuracy_value">%1$d m.</string>
    <string name="menu_gallery">Gallery</string>
    <string name="new_record">Новая запись</string>
    <string name="menu_search">Поиск</string>
    <string name="nav_label_gallery">Галерея</string>
    <string name="nav_label_folders">Выбор текущей папки</string>
    <string name="nav_label_add_new_folder">Новая папка</string>
    <string name="nav_label_edit_new_folder">Редактирование папки</string>
    <string name="expenses_am_action_share">Поделиться</string>
    <string name="expenses_am_action_move">Перенести</string>
    <string name="expenses_am_action_del">Удалить</string>
    <string name="expenses_am_title_count">Выбрано: %1$d</string>
    <string name="msg_sent_to">%1$s \n%2$s \n%3$8.2f %4$s \n%5$s ;\n%6$s"</string>
    <string name="folder_name_validate_msg_duplicate">Такое имя уже есть</string>
    <string name="folder_name_validate_msg_empty">Заполните поле</string>
    <string name="expenses">Расходы %1$s</string>
    <string name="expense_del_warning_1">В случае удаления статьи все связанные записи будут удалены.</string>
    <string name="take_photo">Take Photo</string>
    <string name="menu_folders">Папки расходов</string>
    <string name="points_is_empty">Записей с локацией нет</string>
    <string name="map">Карта</string>
    <string name="photo">Фото</string>
    <string name="nav_label_view_map">View Point on Map</string>
    <string name="nav_map_google">Google Maps</string>
    <string name="title_map_type">Тип карты</string>
    <string name="default_map_type"> По\nумолчанию</string>
    <string name="hybrid_map_type">Спутник</string>
    <string name="nav_map_google_place">Test</string>
    <string name="map_filter_interval">За период</string>
    <string name="map_filter_expense">Статья</string>

</resources>
