<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_move"
            android:icon="@drawable/ic_move_to_inbox_24"
            android:title="@string/expenses_am_action_move"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/expenses_am_action_share"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_delete"
            android:title="@string/expenses_am_action_del"
            android:icon="@drawable/ic_delete_forever_black"
            app:showAsAction="ifRoom"/>
</menu>