<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        >

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/folderShortNameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_folderName"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/folderShortNameTextInputEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/folderDescriptionTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_folderDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/folderShortNameTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/folderDescriptionTextInputEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/saveNewFolderFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:contentDescription="@null"
            android:elevation="4dp"
            android:text="@string/menu_save_title"
            app:backgroundTint="#FFFFFF"
            app:icon="@drawable/ic_check"
            app:layout_constraintTop_toBottomOf="@id/folderDescriptionTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>