<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:checkable="true"
        android:clickable="false"
        android:focusable="true">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/expenseTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:hint="@string/hint_expense"
                    android:inputType="none"
                    app:endIconDrawable="@drawable/ic_drop_down_24"
                    app:endIconMode="custom"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/expenseTextInputEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sumTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:hint="@string/hint_sum"
                    app:layout_constraintEnd_toStartOf="@+id/currencyTextInputLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/expenseTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sumTextInputEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLength="8" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/currencyTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:hint="@string/hint_currency"
                    app:layout_constraintBottom_toBottomOf="@+id/sumTextInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/sumTextInputLayout"
                    app:layout_constraintTop_toTopOf="@+id/sumTextInputLayout">

                <AutoCompleteTextView
                        android:id="@+id/currencyTextInputEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        tools:ignore="LabelFor" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/noteTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/hint_note"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sumTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/noteTextInputEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                    android:id="@+id/gpsImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:padding="8dp"
                    android:src="@drawable/ic_gps_fixed_24"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/noteTextInputLayout" />

            <TextView
                    android:id="@+id/accuracyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textSize="12sp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/gpsImageView"
                    app:layout_constraintStart_toEndOf="@+id/gpsImageView"
                    app:layout_constraintTop_toTopOf="@+id/gpsImageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</com.google.android.material.card.MaterialCardView>